--- a/css/custom-helper.css
+++ b/css/custom-helper.css
@@ -2361,7 +2361,7 @@
 .font-size-13 {font-size: 13px !important;}
 .font-size-14 {font-size: 14px !important;}
 .font-size-15 {font-size: 15px !important;}
-.font-size-16 {font-size: 15px !important;}
+.font-size-16 {font-size: 16px !important;}
 .font-size-18 {font-size: 18px !important;}
 .font-size-20 {font-size: 20px !important;}
 .font-size-22 {font-size: 22px !important;}
@@ -2437,6 +2437,7 @@
 .fl {float: left;}
 .fn {float: none;}
 .right-12 {right: 12px !important;}
+.left-12 {left: 12px !important;}
 .text-transform-none {text-transform: none !important;}
 .colorpink {color: #ff3768 !important;}
 .bgblue {background: #0f99f0 !important;}
